Using builder inside of UI registry